// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Axis/WYAxis Should be render correctly 1`] = `
<g id="WYAxis">
  <line x1="40" y1="10" x2="40" y2="376" stroke="#cccccc"></line>
  <g text-anchor="end">
    <line x1="35" y1="8800" x2="40" y2="8800" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="8804" dy="" index="0" value="8800" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="7544" x2="40" y2="7544" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="7548" dy="" index="1" value="7544" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="6288" x2="40" y2="6288" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="6292" dy="" index="2" value="6288" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="5032" x2="40" y2="5032" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="5036" dy="" index="3" value="5032" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="3777" x2="40" y2="3777" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="3781" dy="" index="4" value="3777" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="2521" x2="40" y2="2521" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="2525" dy="" index="5" value="2521" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="1265" x2="40" y2="1265" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="1269" dy="" index="6" value="1265" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="10" x2="40" y2="10" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="14" dy="" index="7" value="10" styles="[object Object]"></WAxisText-stub>
  </g>
  <WAxisLabel styles="[object Object]" x="17" y="376" transform="rotate(-90 17 376)" textAnchor="start" value="Y Axis"></WAxisLabel>
</g>
`;

exports[`Axis/WYAxis Should be render correctly without line 1`] = `
<g id="WYAxis">
  <!---->
  <g text-anchor="end">
    <line x1="35" y1="8800" x2="40" y2="8800" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="8804" dy="" index="0" value="8800" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="7544" x2="40" y2="7544" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="7548" dy="" index="1" value="7544" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="6288" x2="40" y2="6288" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="6292" dy="" index="2" value="6288" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="5032" x2="40" y2="5032" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="5036" dy="" index="3" value="5032" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="3777" x2="40" y2="3777" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="3781" dy="" index="4" value="3777" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="2521" x2="40" y2="2521" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="2525" dy="" index="5" value="2521" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="1265" x2="40" y2="1265" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="1269" dy="" index="6" value="1265" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <line x1="35" y1="10" x2="40" y2="10" stroke="#cccccc"></line>
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="14" dy="" index="7" value="10" styles="[object Object]"></WAxisText-stub>
  </g>
  <WAxisLabel styles="[object Object]" x="17" y="376" transform="rotate(-90 17 376)" textAnchor="start" value="Y Axis"></WAxisLabel>
</g>
`;

exports[`Axis/WYAxis Should be render correctly without ticks lines 1`] = `
<g id="WYAxis">
  <line x1="40" y1="10" x2="40" y2="376" stroke="#cccccc"></line>
  <g text-anchor="end">
    <!---->
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="8804" dy="" index="0" value="8800" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <!---->
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="7548" dy="" index="1" value="7544" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <!---->
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="6292" dy="" index="2" value="6288" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <!---->
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="5036" dy="" index="3" value="5032" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <!---->
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="3781" dy="" index="4" value="3777" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <!---->
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="2525" dy="" index="5" value="2521" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <!---->
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="1269" dy="" index="6" value="1265" styles="[object Object]"></WAxisText-stub>
  </g>
  <g text-anchor="end">
    <!---->
    <WAxisText-stub colors="#48c0b6,#9d6af5,#ffde69,#e8e8e8,#54ddd9,#5C6BC0,#FB499D" x="30" y="14" dy="" index="7" value="10" styles="[object Object]"></WAxisText-stub>
  </g>
  <WAxisLabel styles="[object Object]" x="17" y="376" transform="rotate(-90 17 376)" textAnchor="start" value="Y Axis"></WAxisLabel>
</g>
`;
